{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 88,
  "lineage": "f1bfc1ee-3eb6-5853-4c68-ccf84788a9fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "eks-external-zone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:network-acl/acl-03bba271602be9cbf",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03bba271602be9cbf",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "326683497037",
            "subnet_ids": [
              "subnet-001b06c062ec695bf",
              "subnet-08a867526d5fae1d9"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "eks-external-zone-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-external-zone-dev"
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "eks-internal-zone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:network-acl/acl-0c3fe84bf46fe53c4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c3fe84bf46fe53c4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "326683497037",
            "subnet_ids": [
              "subnet-0431629a93861992f",
              "subnet-083f1984b6efc2d93"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "eks-internal-zone-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-internal-zone-dev"
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "rds-external-zone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:network-acl/acl-01e5f4bc1db2f34f4",
            "egress": [],
            "id": "acl-01e5f4bc1db2f34f4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.10.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.11.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 102,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.12.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 103,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.13.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 104,
                "to_port": 65535
              }
            ],
            "owner_id": "326683497037",
            "subnet_ids": [
              "subnet-06c2d0d05bad9af89",
              "subnet-0f692de40bc3ed403"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rds-external-zole-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rds-external-zole-dev"
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "rds-secure-zone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:network-acl/acl-0d0d84aec94dc68f4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/23",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.10.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 103,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.11.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 104,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.12.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 105,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.13.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 106,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/23",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 102,
                "to_port": 65535
              }
            ],
            "id": "acl-0d0d84aec94dc68f4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/23",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 5432
              },
              {
                "action": "allow",
                "cidr_block": "10.0.10.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 103,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.11.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 104,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.12.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 105,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.13.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 106,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/23",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 102,
                "to_port": 5432
              }
            ],
            "owner_id": "326683497037",
            "subnet_ids": [
              "subnet-018442f75565e88d3",
              "subnet-0ec50fa2f7788500c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rds-secure-zone-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rds-secure-zone-dev"
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress-secure-zone-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "101",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2942062968",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "102",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.2.0/23",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-918435705",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "103",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.10.0/24",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4147177657",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 103,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "104",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.11.0/24",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3725327674",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 104,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "105",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.12.0/24",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-528818938",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 105,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc",
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": "106",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.13.0/24",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2254914811",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 106,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "eks-egress-external-zone-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1147016557",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03bba271602be9cbf",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.eks-external-zone",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "eks-egress-internal-zole-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3931338049",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c3fe84bf46fe53c4",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_network_acl.eks-internal-zone",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "eks-ingress-external-zone-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1754890349",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03bba271602be9cbf",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc",
            "aws_network_acl.eks-external-zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "eks-ingress-internal-zone-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1525670382",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c3fe84bf46fe53c4",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.eks-internal-zone",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress-secure-zone-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "101",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": false,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-317968031",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": "102",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.2.0/23",
            "egress": false,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1701649519",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "aws_network_acl.rds-secure-zone"
          ]
        },
        {
          "index_key": "103",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.10.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4274540544",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 103,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "104",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.11.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2320546191",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 104,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc",
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": "105",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.12.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-301331936",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 105,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "106",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.13.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1718298384",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d0d84aec94dc68f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 106,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_network_acl.rds-secure-zone",
            "aws_subnet.private",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "rds-ingress-external-zone-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "192.168.0.0/16",
            "egress": false,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3261911458",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e5f4bc1db2f34f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.rds-external-zone",
            "aws_subnet.private",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": "101",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.10.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1506385357",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e5f4bc1db2f34f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc",
            "aws_network_acl.rds-external-zone",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": "102",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.11.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-777473853",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e5f4bc1db2f34f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "aws_network_acl.rds-external-zone"
          ]
        },
        {
          "index_key": "103",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.12.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3052536658",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e5f4bc1db2f34f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 103,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.rds-external-zone",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "104",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.13.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3245009629",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e5f4bc1db2f34f4",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 104,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.rds-external-zone",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-eks-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:subnet/subnet-083f1984b6efc2d93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/23",
            "id": "subnet-083f1984b6efc2d93",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326683497037",
            "tags": {
              "Environment": "dev",
              "Name": "private-eks-1-dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-eks-1-dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-eks-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:subnet/subnet-0431629a93861992f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/23",
            "id": "subnet-0431629a93861992f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326683497037",
            "tags": {
              "Environment": "dev",
              "Name": "private-eks-2-dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-eks-2-dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-rds-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:subnet/subnet-018442f75565e88d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-018442f75565e88d3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326683497037",
            "tags": {
              "Environment": "dev",
              "Name": "private-rds-1-dev",
              "kubernetes.io/role/internal-elb": ""
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-rds-1-dev",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-rds-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:subnet/subnet-0ec50fa2f7788500c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0ec50fa2f7788500c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326683497037",
            "tags": {
              "Environment": "dev",
              "Name": "private-rds-2-dev",
              "kubernetes.io/role/internal-elb": ""
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-rds-2-dev",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-eks-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:subnet/subnet-08a867526d5fae1d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/23",
            "id": "subnet-08a867526d5fae1d9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "326683497037",
            "tags": {
              "Environment": "dev",
              "Name": "public-eks-1-dev",
              "kubernetes.io/role.elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-eks-1-dev",
              "kubernetes.io/role.elb": "1"
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-eks-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:subnet/subnet-001b06c062ec695bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/23",
            "id": "subnet-001b06c062ec695bf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "326683497037",
            "tags": {
              "Environment": "dev",
              "Name": "public-eks-2-dev",
              "kubernetes.io/role.elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-eks-2-dev",
              "kubernetes.io/role.elb": "1"
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-rds-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:subnet/subnet-0f692de40bc3ed403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0f692de40bc3ed403",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "326683497037",
            "tags": {
              "Environment": "dev",
              "Name": "public-rds-1-dev",
              "kubernetes.io/role.elb": ""
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-rds-1-dev",
              "kubernetes.io/role.elb": ""
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-rds-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:subnet/subnet-06c2d0d05bad9af89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-06c2d0d05bad9af89",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "326683497037",
            "tags": {
              "Environment": "dev",
              "Name": "public-rds-2-dev",
              "kubernetes.io/role.elb": ""
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-rds-2-dev",
              "kubernetes.io/role.elb": ""
            },
            "vpc_id": "vpc-09a5d6f26d3577cfd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:326683497037:vpc/vpc-09a5d6f26d3577cfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffd5d49c098f8f89",
            "default_route_table_id": "rtb-09bf42473d15cc670",
            "default_security_group_id": "sg-076e0fe8321c3db53",
            "dhcp_options_id": "dopt-084096c09d494f531",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09a5d6f26d3577cfd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09bf42473d15cc670",
            "owner_id": "326683497037",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}